--- a/index.css
+++ b/index.css
@@ -1,27 +1,15 @@
-* {
-    border: 1px solid red;
-}
-
-.column0-label > * {
-    display: inline-block;
-
-}
-
-.grid-cell {
-    transition: 5s;
-    margin: 2px;
-    width: auto;
-    height: auto;
-    text-align: center;
-}
-
-.grid-cell:hover {
-    background-color: red;
+body {
+    border: 1px solid blue;
 }
 
 #container {
-    width: 1200px;
-    height: 1200px;
-    margin: auto;
+    display: grid;    
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    max-width: 1200px;
+}
 
+#container > * {
+    text-align: center;
+    border: 1px solid red;
 }
