--- a/index.css
+++ b/index.css
@@ -1,18 +1,39 @@
 body {
-    border: 1px solid blue;
+    border: 1px solid black;
+    background-color: gray;
 }
 
 #container {
     display: grid;  
-    max-width: 1200px;
+    max-width: 960px;
     margin: auto;
+    border: 2px solid black;
 }
 
 .grid-cell {
-    background-color: rgb(71, 138, 138);
+    background-color: rgb(130,130,130);
 }
 
 .controls {
     margin: auto;
     text-align: center;
+}
+
+.frame {
+    background-color: rgb(179, 5, 5);
+    max-width: 1200px;
+    margin: auto;
+    border-radius: 15%;
+    box-shadow: 5px 5px;
+    border: 2px solid black;
+    text-align: center;
+}
+
+button {
+    border-radius: 99%;
+    
+}
+
+.frame-gap {
+    height: 100px;
 }
