--- a/index.css
+++ b/index.css
@@ -1,37 +1,51 @@
 body {
-    border: 1px solid black;
     background-color: gray;
 }
 
 #container {
-    display: grid;  
+    display: grid;
     max-width: 960px;
     margin: auto;
     border: 2px solid black;
+}
+
+#container, .controls.buttons, .controls-colour {
+    max-width: 960px;
+    margin: auto;
 }
 
 .grid-cell {
     background-color: rgb(130,130,130);
 }
 
-.controls {
-    margin: auto;
+.controls-buttons {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 2em;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.controls-colour {
     text-align: center;
+    margin: auto;
 }
 
 .frame {
     background-color: rgb(179, 5, 5);
     max-width: 1200px;
     margin: auto;
-    border-radius: 15%;
+    border-radius: 10%;
     box-shadow: 5px 5px;
     border: 2px solid black;
     text-align: center;
+    max-height: 100%;
 }
 
 button {
-    border-radius: 99%;
-    
+    border-radius: 50%;
+    height: 10em;
+    width: 10em;
 }
 
 .frame-gap {
